compiler/testData/diagnostics/tests/exceptions/incorrectCallOnILT.kt
// FIR_IDENTICAL
// ISSUE: KT-62306

fun main() {
    1.<!NONE_APPLICABLE!>plus<!>()
}
